vbnc/vbnc/tests/Errors/33107-1.vb
Option Strict On
Class A
    Shared b As Long
    Shared Sub Main()
        Dim o As Integer = If(b, Nothing)
    End Sub
End Class